actors and users collections files and code added
