# routes/index.js
@@ -19,5 +19,7 @@ router.get('/', (req, res) => {
 
 router.use('/directors', require('./directors'));
 router.use('/movies', require('./movies'));
+router.use('/actors', require('./actors'));
+router.use('/users', require('./users'));
 
 module.exports = router;
